2011-02-18  Francois Felix Ingrand  <felix@ingrand.net>

	* mp-register.c (read_int_from_socket): fix a 32/64 bits problem when the message passer and the client are running on 64 vs. 32 bits.

	* configure.ac: push the version to 1.09beta

 2011-02-17  Felix Ingrand  <felix@cturtle>

	* Modified the ope (OP Editor) so it does not start a graphical display when
	generating .tex doc files. As a result, the installation should
	not require a running X11 server anymore.

2011-02-07  Felix Ingrand  <felix@cturtle>

	* site.make.in and Makefile.in : do some clean up in the FLAGS mess...

2011-01-21  Francois Felix Ingrand  <felix@ingrand.net>

	* ev-predicate.c, ev-predicate.h, ev-predicate_f-pub.h, opaque-pub.h,
		  oprs-pred-func.c Clean up the evaluable predicate types to
		  make them more  acceptable to C++ code. (for PR2/ROS)

2011-01-20  Francois Felix Ingrand  <felix@ingrand.net>

	* mp.c (get_and_buffer_message): adjust some type casting for printing.

2010-11-23  Francois Felix Ingrand  <felix@ingrand.net>

	* configure.ac: Bump version number to 1.08 Beta.

2010-10-08  Francois Felix Ingrand  <felix@ingrand.net>

	* ev-predicate.c (declare_eval_pred): Use LONG-LONGP instead of
		  LONG_LONGP (to remain consistent with predicate/function name.

2010-10-07  Francois Felix Ingrand  <felix@ingrand.net>

	* ev-predicate.c (declare_eval_pred): added INTEGERP, FLOATP and
		  LONG_LONGP as evaluable predicates.

	* ev-function.c (float_to_int_ef): Allowed to pass an int...
	(int_to_float_ef): allowed to pass a float and a long long

	* oprs-init.c (parse_one_or_more): The PRS kernel should return 0 when
		  everything is OK. Thanks to Eric Engstrom at SIFT for pointing this.

2010-03-05  Francois Felix Ingrand  <felix@ingrand.net>

	* Clean up the version stuff... Now version is defined in the
	configure.ac only and then it propagates in version.c and the
	documentation with the proper PACKAGE_VERSION macro.

2010-03-02  Francois Felix Ingrand  <felix@ingrand.net>
