@@ -3,7 +3,7 @@ static const char* const rcsid = "$Id$";
 /*                               -*- Mode: C -*- 
  * oprs-util.c -- 
  * 
- * Copyright (c) 1991-2003 Francois Felix Ingrand.
+ * Copyright (c) 1991-2010 Francois Felix Ingrand.
  * All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
@@ -42,7 +42,9 @@ static const char* const rcsid = "$Id$";
 #include "opaque.h"
 #include "oprs-type-pub.h"
 #include "lang.h"
+
 #include "oprs-util_f.h"
+
 
 PBoolean get_int_from_env(PString env, int *val)
 {
