@@ -3,7 +3,7 @@
  * 
  * $Id$
  * 
- * Copyright (c) 1991-2003 Francois Felix Ingrand.
+ * Copyright (c) 1991-2011 Francois Felix Ingrand.
  * All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
@@ -72,5 +72,13 @@ extern PString parser_message;
 extern PBoolean too_long_message;
 
 #define MAX_LENGTH_PARSER_MESSAGE 1000
+
+/* Macro to allocate and create a string equal to from (which is double quoted...) pointed by to (without the quote). */
+#define NEWQSTR_ENVAR(from, to) do {char * tmp;\
+                                    NEWQSTR(from,tmp);\
+				    to = replace_env_tring(tmp);\
+				    FREE(tmp);\
+				   } while (0)
+
 
 #endif /* INCLUDE_parser_function */
