@@ -1,3 +1,8 @@
+2011-02-20  Francois Felix Ingrand  <felix@ingrand.net>
+
+	* parser-funct.c (replace_env_string): 
+	* oprs-parser.y : One can now specify environment variables (e.g. ${HOME}, ${ROBOTPKG_BASE}) in the "set oprs_data_path" command.
+
 2011-02-18  Francois Felix Ingrand  <felix@ingrand.net>
 
 	* mp-register.c (read_int_from_socket): fix a 32/64 bits problem when the message passer and the client are running on 64 vs. 32 bits.
